<resources>
    <string name="app_name">Insights</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date of Birth (DD/MM/YYYY)</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="created_at">Created at </string>
    <string name="sort">Sort</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="record">Record</string>
    <string name="record_description">Record and create your day-to-day task</string>
    <string name="schedule_description">Schedule your task to complete on time</string>
    <string name="manage_description">Manage and plan according to your schedule</string>
    <string name="schedule">Schedule Date and Time</string>
    <string name="schedule_at">Scheduled at</string>
    <string name="done">Done</string>
    <string name="created_time">Created at %1$s</string>
    <string name="scheduled_time">%1$s/%2$s/%3$s ,%4$s:%5$s</string>
    <string name="widget_id">Widget Id</string>
    <string name="widget_name">Widget Name</string>
    <string name="make_api_call">Call Api</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="name">Name :</string>
    <string name="phone_number">Phone Number : </string>
    <string name="displayDob">Dob :</string>
    <string name="create_new_task">Create New Task</string>
    <string name="task">Task</string>
    <string name="completed">Completed</string>
    <string name="username">Name : %1$s</string>
    <string name="mobileno">"Mobile No : %1$s"</string>
    <string name="dobUser">"Dob : %1$s"</string>
    <string name="logout">Logout</string>
    <string name="getLocation" > Latitude : %1$s , Longitude : %2$s</string>


</resources>