<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/yantramanav_black"
        android:text="@string/profile"
        android:textColor="@color/blue_shade3"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="87dp"
        android:text="@string/name"
        android:textColor="@color/blue_shade4"
        android:textSize="30sp"
        android:fontFamily="@font/yantramanav_medium"
        app:layout_constraintBottom_toTopOf="@+id/textViewMobileNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewMobileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="76dp"
        android:text="@string/phone_number"
        android:textColor="@color/blue_shade4"
        android:fontFamily="@font/yantramanav_medium"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDob"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="76dp"
        android:text="@string/displayDob"
        android:fontFamily="@font/yantramanav_medium"
        android:textColor="@color/blue_shade4"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMobileNo" />

</androidx.constraintlayout.widget.ConstraintLayout>