<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/login"
        android:textColor="@color/blue_shade4"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="349dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/full_name"
        app:boxBackgroundColor="@color/blue_shade7"
        app:counterTextColor="@color/blue_shade1"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/blue_shade4"
        app:hintTextColor="@color/blue_shade4"
        android:textColorHint="@color/blue_shade4"
        app:layout_constraintBottom_toTopOf="@+id/editTextMobileNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="@color/blue_shade4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="@font/yantramanav_medium"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:nextFocusDown="@id/editTextMobileNo"
            android:textColor="@color/blue_shade4"
            app:helperText="Required" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMobileNo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no"
        app:errorEnabled="true"
        app:hintTextColor="@color/blue_shade4"
        app:boxStrokeColor="@color/blue_shade4"
        android:textColorHint="@color/blue_shade4"
        app:boxBackgroundColor="@color/blue_shade7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:startIconDrawable="@drawable/baseline_local_phone_24"
        app:startIconTint="@color/blue_shade4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:fontFamily="@font/yantramanav_medium"
            android:textColor="@color/blue_shade4"
            app:helperText="Required"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextDob"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="349dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:hint="@string/dob"
        app:errorEnabled="true"
        app:hintTextColor="@color/blue_shade4"
        app:boxStrokeColor="@color/blue_shade4"
        android:textColorHint="@color/blue_shade4"
        app:boxBackgroundColor="@color/blue_shade7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMobileNo"
        app:startIconDrawable="@drawable/baseline_date_range_24"
        app:startIconTint="@color/blue_shade4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yantramanav_medium"
            android:inputType="number"
            android:maxLength="10"
            android:imeOptions="actionDone"
            android:textColor="@color/blue_shade4"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="70dp"
        android:focusable="false"
        android:text="@string/login"
        android:textColor="@color/blue_shade4"
        android:textSize="15sp"
        android:fontFamily="@font/yantramanav_black"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDob"
        app:strokeColor="@color/blue_shade3" />

</androidx.constraintlayout.widget.ConstraintLayout>