<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_bold"
        android:text="Create New Task"
        android:textColor="@color/graphBlue"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tickButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/created_at"
        android:textColor="@color/graphBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/graphBlue"
        android:foregroundTint="@color/graphBlue"
        android:hint="@string/title"
        android:textColorHint="@color/graphBlue"
        app:boxStrokeColor="@color/graphBlue"
        app:hintTextColor="@color/graphBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTime">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_light"
            android:textColor="@color/graphBlue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextDesc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/graphBlue"
        android:foregroundTint="@color/graphBlue"
        android:hint="@string/desc"
        android:textColorHint="@color/graphBlue"
        app:boxStrokeColor="@color/graphBlue"
        app:hintTextColor="@color/graphBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_light"
            android:gravity="top"
            android:textColor="@color/graphBlue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>